--- a/.github/workflows/spotbugs.yml
+++ b/.github/workflows/spotbugs.yml
@@ -27,7 +27,7 @@ jobs:
         run: chmod +x gradlew
 
       - name: Run SpotBugs
-        run: ./gradlew spotbugs
+        run: ./gradlew spotbugsMain
 
       - name: Upload SpotBugs results
         uses: actions/upload-artifact@v4
